2007-07-13  Matthew Allum  <mallum@openedhand.com>

	* Sato/matchbox/Makefile.am:
	* Sato/matchbox/theme.xml:
	Add a down arrow for menus.

2007-07-11  Matthew Allum  <mallum@openedhand.com>

	* Sato/matchbox/Makefile.am:
	* Sato/matchbox/theme.xml:
	Fix window close button state.

2006-12-23  Matthew Allum  <mallum@openedhand.com>

	* Sato/matchbox/theme.xml:
	Tweak titlebar text positioning / clipping.

2006-12-22  Matthew Allum  <mallum@openedhand.com>

	* Sato/matchbox/theme.xml:
	Add panel in titlebar setup

2006-12-22  Matthew Allum  <mallum@openedhand.com>

	* Sato/matchbox/theme.desktop.in:
	Remove old clearlooks config

2006-12-20  Matthew Allum  <mallum@openedhand.com>

	* Sato/matchbox/Makefile.am:
	* Sato/matchbox/theme.xml:
	Add rough dialog styalising
